fixed invisible modal issue

--- a/src/components/Middle/Middle.css
+++ b/src/components/Middle/Middle.css
@@ -4,7 +4,7 @@
     left: 25%;
     top: 25%;
     /* bottom: 40px; */
-    background-color: white;
+    background-color: whitesmoke;
     width: 60%;
 }
 
@@ -14,8 +14,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    opacity: 95%;
-    background-color: rgb(41, 39, 39);
+    background-color: rgba(39,39,39,1) !important;
 }
 
 .addTask {
